--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,9 +7,11 @@
     "com.unity.memoryprofiler": "1.1.0",
     "com.unity.nuget.mono-cecil": "1.10.2",
     "com.unity.probuilder": "5.2.2",
+    "com.unity.render-pipelines.universal": "15.0.6",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.2",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "15.0.6",
     "com.unity.visualscripting": "1.9.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
